# ticket-availability

./: .gitignore  README.md  pyproject.toml  run.py
src/: __init__.py  email.py  ticket.py
