[tool.poetry]
name = "tate-scraper"
version = "0.1.0"
description = "i want to see some infinity rooms"
authors = ["cvaf <costasvaf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"
bs4 = "^0.0.1"
lxml = "^4.6.4"
selenium = "^4.1.0"
google-api-python-client = "^2.31.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.4.6"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
